2016-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/compare.c (DifferenceImage): Fix all-black difference
	image if an input file is colormapped.  Resolves SourceForge issue
	#404 "Difference file does not work if PNG ".

2016-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Fix Coverity issue 55866 "Resource
	leak".

	* magick/enum_strings.c (StringToCompositeOperator): Fix Coverity
	issue 139296 "Constant expression result".

	* magick/channel.c (ImportImageChannelsMasked): Fix Coverity issue
	139297 "Constant expression result".  This was a bug but only in
	terms of reduced performance, not results.

	* Magick++/lib/Drawable.cpp
	(PathSmoothCurvetoRel::operator): Fix Coverity issue 139301 "Using
	invalid iterator".
	(PathSmoothCurvetoRel::operator): Fix Coverity issue 139302 "Using
	invalid iterator"

	* magick/attribute.c: From SourceForge patches #47
	"GraphicsMagick-1.3.25-get-exif-attribute-gps-fix.patch" and
	"GraphicsMagick-1.3.25-set-exif-orientation-fix.patch" by Troy
	Patteson with description (related to provided Coverity reports in
	coverity.txt): Those coverity errors indicate a problem with the
	earlier patch I sent you to fix getting the EXIF orientation when
	the GPS IFD occurs before the EXIF IFD. Although the patch fixed
	that issue it introduced a new issue in that GPS tags could no
	longer be retrieved. This occurs because the gpsfound flag is set
	when the GPS IFD is pushed onto the stack but then cleared
	immediately when breaking out of the loop processing the directory
	entries for the current IFD. The solution is to push the gpsfound
	flag onto the stack as well as it needs to be set when the GPS IFD
	is popped off the stack rather than being set straight away.

	The second coverity error relates to gpsoffset not being set in
	FindEXIFAttribute(). The code that sets gpsoffset in
	GenerateEXIFAttribute() was embedded in the code that gets tags